writing polynomial_sframe function

--- a/Specializations/Machine Learning/Regression/Week 3/Assignment 1/week-3-polynomial-regression-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 3/Assignment 1/week-3-polynomial-regression-assignment-blank.ipynb
@@ -93,11 +93,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+\n",
+      "| power_1 |\n",
+      "+---------+\n",
+      "|   1.0   |\n",
+      "|   2.0   |\n",
+      "|   3.0   |\n",
+      "+---------+\n",
+      "[3 rows x 1 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "ex_sframe = graphlab.SFrame()\n",
     "ex_sframe['power_1'] = tmp\n",
@@ -120,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -131,7 +147,7 @@
     "    # initialize the SFrame:\n",
     "    poly_sframe = graphlab.SFrame()\n",
     "    # and set poly_sframe['power_1'] equal to the passed feature\n",
-    "\n",
+    "    poly_sframe['power_1'] = feature\n",
     "    # first check if degree > 1\n",
     "    if degree > 1:\n",
     "        # then loop over the remaining degrees:\n",
@@ -140,7 +156,7 @@
     "            # first we'll give the column a name:\n",
     "            name = 'power_' + str(power)\n",
     "            # then assign poly_sframe[name] to the appropriate power of feature\n",
-    "\n",
+    "            poly_sframe[name] = feature.apply(lambda x: x**power)\n",
     "    return poly_sframe"
    ]
   },
@@ -153,11 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+---------+---------+\n",
+      "| power_1 | power_2 | power_3 |\n",
+      "+---------+---------+---------+\n",
+      "|   1.0   |   1.0   |   1.0   |\n",
+      "|   2.0   |   4.0   |   8.0   |\n",
+      "|   3.0   |   9.0   |   27.0  |\n",
+      "+---------+---------+---------+\n",
+      "[3 rows x 3 columns]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print polynomial_sframe(tmp, 3)"
    ]
