Solve Assignment 1 Week 5 of Machine Learning Specialization (Regression)

--- a/Specializations/Machine Learning/Regression/Week 5/Assignment 1/week-5-lasso-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Regression/Week 5/Assignment 1/week-5-lasso-assignment-1-blank.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -48,12 +48,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] \u001b[1;32m1451823278 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_FILE to /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/certifi/cacert.pem\n",
+      "\u001b[0m\u001b[1;32m1451823278 : INFO:     (initialize_globals_from_environment:282): Setting configuration variable GRAPHLAB_FILEIO_ALTERNATIVE_SSL_CERT_DIR to \n",
+      "\u001b[0mThis non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n",
+      "\n",
+      "[INFO] Start server at: ipc:///tmp/graphlab_server-29251 - Server binary: /Users/tjaskula/.graphlab/anaconda/lib/python2.7/site-packages/graphlab/unity_server - Server log: /tmp/graphlab_server_1451823278.log\n",
+      "[INFO] GraphLab Server Version: 1.7.1\n"
+     ]
+    }
+   ],
    "source": [
     "sales = graphlab.SFrame('kc_house_data.gl/')"
    ]
@@ -74,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -141,11 +154,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROGRESS: Linear regression:\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: Number of examples          : 21613\n",
+      "PROGRESS: Number of features          : 17\n",
+      "PROGRESS: Number of unpacked features : 17\n",
+      "PROGRESS: Number of coefficients    : 18\n",
+      "PROGRESS: Starting Accelerated Gradient (FISTA)\n",
+      "PROGRESS: --------------------------------------------------------\n",
+      "PROGRESS: +-----------+----------+-----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: | Iteration | Passes   | Step size | Elapsed Time | Training-max_error | Training-rmse |\n",
+      "PROGRESS: +-----------+----------+-----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: Tuning step size. First iteration could take longer than subsequent iterations.\n",
+      "PROGRESS: | 1         | 2        | 0.000002  | 1.318430     | 6962915.603493     | 426631.749026 |\n",
+      "PROGRESS: | 2         | 3        | 0.000002  | 1.346934     | 6843144.200219     | 392488.929838 |\n",
+      "PROGRESS: | 3         | 4        | 0.000002  | 1.375060     | 6831900.032123     | 385340.166783 |\n",
+      "PROGRESS: | 4         | 5        | 0.000002  | 1.400934     | 6847166.848958     | 384842.383767 |\n",
+      "PROGRESS: | 5         | 6        | 0.000002  | 1.428923     | 6869667.895833     | 385998.458623 |\n",
+      "PROGRESS: | 6         | 7        | 0.000002  | 1.454586     | 6847177.773672     | 380824.455891 |\n",
+      "PROGRESS: +-----------+----------+-----------+--------------+--------------------+---------------+\n",
+      "PROGRESS: TERMINATED: Iteration limit reached.\n",
+      "PROGRESS: This model may not be optimal. To improve it, consider increasing `max_iterations`.\n"
+     ]
+    }
+   ],
    "source": [
     "model_all = graphlab.linear_regression.create(sales, target='price', features=all_features,\n",
     "                                              validation_set=None, \n",
@@ -161,12 +202,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------+---------------+\n",
+      "|       name       | index |     value     |\n",
+      "+------------------+-------+---------------+\n",
+      "|   (intercept)    |  None |  274873.05595 |\n",
+      "|     bedrooms     |  None |      0.0      |\n",
+      "| bedrooms_square  |  None |      0.0      |\n",
+      "|    bathrooms     |  None | 8468.53108691 |\n",
+      "|   sqft_living    |  None | 24.4207209824 |\n",
+      "| sqft_living_sqrt |  None | 350.060553386 |\n",
+      "|     sqft_lot     |  None |      0.0      |\n",
+      "|  sqft_lot_sqrt   |  None |      0.0      |\n",
+      "|      floors      |  None |      0.0      |\n",
+      "|  floors_square   |  None |      0.0      |\n",
+      "|    waterfront    |  None |      0.0      |\n",
+      "|       view       |  None |      0.0      |\n",
+      "|    condition     |  None |      0.0      |\n",
+      "|      grade       |  None | 842.068034898 |\n",
+      "|    sqft_above    |  None | 20.0247224171 |\n",
+      "|  sqft_basement   |  None |      0.0      |\n",
+      "|     yr_built     |  None |      0.0      |\n",
+      "|   yr_renovated   |  None |      0.0      |\n",
+      "+------------------+-------+---------------+\n",
+      "[18 rows x 3 columns]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_all.get(\"coefficients\").print_rows(num_rows=18)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -225,21 +299,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "31.6227766017\n",
+      "100.0\n",
+      "316.227766017\n",
+      "1000.0\n",
+      "3162.27766017\n",
+      "10000.0\n",
+      "31622.7766017\n",
+      "100000.0\n",
+      "316227.766017\n",
+      "1000000.0\n",
+      "3162277.66017\n",
+      "10000000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "l1_penalty_values = np.logspace(1, 7, num=13)\n",
+    "min_error = None\n",
+    "best_l1_penalty = None\n",
+    "validation_errors = []\n",
+    "for l1_penalty in l1_penalty_values:\n",
+    "    print l1_penalty\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, verbose=None,\n",
+    "                                              l2_penalty=0., l1_penalty=l1_penalty)\n",
+    "    price_predicted = model.predict(validation)\n",
+    "    RSS = ((price_predicted-validation['price'])**2).sum()\n",
+    "    validation_errors.append(RSS)\n",
+    "    if min_error is None or RSS < min_error:\n",
+    "        min_error = RSS\n",
+    "        best_l1_penalty = l1_penalty"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[625766285142460.5, 625766285362394.4, 625766286057885.1, 625766288257224.4, 625766295212186.1, 625766317206080.8, 625766386760658.0, 625766606749278.5, 625767302791634.9, 625769507643885.8, 625776517727024.5, 625799062845466.6, 625883719085425.0]\n",
+      "Best l1_penalty: 10.0\n",
+      "Best RSS: 625766285142460.500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print validation_errors\n",
+    "print \"Best l1_penalty: \" + str(best_l1_penalty)\n",
+    "print \"Best RSS: \" + str('{0:f}'.format(min_error))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,12 +377,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.56983602382e+14\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, verbose=None,\n",
+    "                                              l2_penalty=0., l1_penalty=best_l1_penalty)\n",
+    "price_predicted = model.predict(testing)\n",
+    "RSS = ((price_predicted-testing['price'])**2).sum()\n",
+    "print RSS"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -269,12 +409,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------+-------+------------------+\n",
+      "|       name       | index |      value       |\n",
+      "+------------------+-------+------------------+\n",
+      "|   (intercept)    |  None |  18993.4272128   |\n",
+      "|     bedrooms     |  None |  7936.96767903   |\n",
+      "| bedrooms_square  |  None |  936.993368193   |\n",
+      "|    bathrooms     |  None |  25409.5889341   |\n",
+      "|   sqft_living    |  None |  39.1151363797   |\n",
+      "| sqft_living_sqrt |  None |  1124.65021281   |\n",
+      "|     sqft_lot     |  None | 0.00348361822299 |\n",
+      "|  sqft_lot_sqrt   |  None |  148.258391011   |\n",
+      "|      floors      |  None |   21204.335467   |\n",
+      "|  floors_square   |  None |  12915.5243361   |\n",
+      "|    waterfront    |  None |  601905.594545   |\n",
+      "|       view       |  None |  93312.8573119   |\n",
+      "|    condition     |  None |  6609.03571245   |\n",
+      "|      grade       |  None |  6206.93999188   |\n",
+      "|    sqft_above    |  None |  43.2870534193   |\n",
+      "|  sqft_basement   |  None |  122.367827534   |\n",
+      "|     yr_built     |  None |  9.43363539372   |\n",
+      "|   yr_renovated   |  None |  56.0720034488   |\n",
+      "+------------------+-------+------------------+\n",
+      "[18 rows x 3 columns]\n",
+      "\n",
+      "# Non zeros : 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.get(\"coefficients\").print_rows(num_rows=18)\n",
+    "print \"# Non zeros : \" + str(model['coefficients']['value'].nnz())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -316,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -339,12 +514,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000000.0\n",
+      "# Non zeros : 18\n",
+      "127427498.57\n",
+      "# Non zeros : 18\n",
+      "162377673.919\n",
+      "# Non zeros : 18\n",
+      "206913808.111\n",
+      "# Non zeros : 18\n",
+      "263665089.873\n",
+      "# Non zeros : 17\n",
+      "335981828.628\n",
+      "# Non zeros : 17\n",
+      "428133239.872\n",
+      "# Non zeros : 17\n",
+      "545559478.117\n",
+      "# Non zeros : 17\n",
+      "695192796.178\n",
+      "# Non zeros : 17\n",
+      "885866790.41\n",
+      "# Non zeros : 16\n",
+      "1128837891.68\n",
+      "# Non zeros : 15\n",
+      "1438449888.29\n",
+      "# Non zeros : 15\n",
+      "1832980710.83\n",
+      "# Non zeros : 13\n",
+      "2335721469.09\n",
+      "# Non zeros : 12\n",
+      "2976351441.63\n",
+      "# Non zeros : 10\n",
+      "3792690190.73\n",
+      "# Non zeros : 6\n",
+      "4832930238.57\n",
+      "# Non zeros : 5\n",
+      "6158482110.66\n",
+      "# Non zeros : 3\n",
+      "7847599703.51\n",
+      "# Non zeros : 1\n",
+      "10000000000.0\n",
+      "# Non zeros : 1\n",
+      "Best l1_penalty: 100000000.0\n",
+      "Best RSS: 627492659875075.250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_error = None\n",
+    "best_l1_penalty = None\n",
+    "validation_errors = []\n",
+    "for l1_penalty in l1_penalty_values:\n",
+    "    print l1_penalty\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, verbose=None,\n",
+    "                                              l2_penalty=0., l1_penalty=l1_penalty)\n",
+    "    print \"# Non zeros : \" + str(model['coefficients']['value'].nnz())\n",
+    "    \n",
+    "    price_predicted = model.predict(validation)\n",
+    "    RSS = ((price_predicted-validation['price'])**2).sum()\n",
+    "    validation_errors.append(RSS)\n",
+    "    if min_error is None or RSS < min_error:\n",
+    "        min_error = RSS\n",
+    "        best_l1_penalty = l1_penalty\n",
+    "\n",
+    "print \"Best l1_penalty: \" + str(best_l1_penalty)\n",
+    "print \"Best RSS: \" + str('{0:f}'.format(min_error))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,14 +610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "l1_penalty_min = \n",
-    "l1_penalty_max = "
+    "l1_penalty_min = 2976351441.63\n",
+    "l1_penalty_max = 3792690190.73"
    ]
   },
   {
@@ -396,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -418,12 +662,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2976351441.63\n",
+      "# Non zeros : 10\n",
+      "3019316638.95\n",
+      "# Non zeros : 10\n",
+      "3062281836.27\n",
+      "# Non zeros : 10\n",
+      "3105247033.59\n",
+      "# Non zeros : 10\n",
+      "3148212230.91\n",
+      "# Non zeros : 10\n",
+      "3191177428.24\n",
+      "# Non zeros : 10\n",
+      "3234142625.56\n",
+      "# Non zeros : 10\n",
+      "3277107822.88\n",
+      "# Non zeros : 10\n",
+      "3320073020.2\n",
+      "# Non zeros : 8\n",
+      "3363038217.52\n",
+      "# Non zeros : 8\n",
+      "3406003414.84\n",
+      "# Non zeros : 8\n",
+      "3448968612.16\n",
+      "# Non zeros : 7\n",
+      "3491933809.48\n",
+      "# Non zeros : 7\n",
+      "3534899006.8\n",
+      "# Non zeros : 7\n",
+      "3577864204.12\n",
+      "# Non zeros : 7\n",
+      "3620829401.45\n",
+      "# Non zeros : 6\n",
+      "3663794598.77\n",
+      "# Non zeros : 6\n",
+      "3706759796.09\n",
+      "# Non zeros : 6\n",
+      "3749724993.41\n",
+      "# Non zeros : 6\n",
+      "3792690190.73\n",
+      "# Non zeros : 6\n",
+      "Best l1_penalty: 2976351441.63\n",
+      "Best RSS: 966925692362085.250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_error = None\n",
+    "best_l1_penalty = None\n",
+    "validation_errors = []\n",
+    "for l1_penalty in l1_penalty_values:\n",
+    "    print l1_penalty\n",
+    "    model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, verbose=None,\n",
+    "                                              l2_penalty=0., l1_penalty=l1_penalty)\n",
+    "    print \"# Non zeros : \" + str(model['coefficients']['value'].nnz())\n",
+    "    \n",
+    "    price_predicted = model.predict(validation)\n",
+    "    RSS = ((price_predicted-validation['price'])**2).sum()\n",
+    "    validation_errors.append(RSS)\n",
+    "    if min_error is None or RSS < min_error:\n",
+    "        min_error = RSS\n",
+    "        best_l1_penalty = l1_penalty\n",
+    "\n",
+    "print \"Best l1_penalty: \" + str(best_l1_penalty)\n",
+    "print \"Best RSS: \" + str('{0:f}'.format(min_error))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,9 +749,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.04693748875e+15\n",
+      "+------------------+-------+---------------+\n",
+      "|       name       | index |     value     |\n",
+      "+------------------+-------+---------------+\n",
+      "|   (intercept)    |  None | 222253.192544 |\n",
+      "|     bedrooms     |  None | 661.722717782 |\n",
+      "| bedrooms_square  |  None |      0.0      |\n",
+      "|    bathrooms     |  None | 15873.9572593 |\n",
+      "|   sqft_living    |  None | 32.4102214513 |\n",
+      "| sqft_living_sqrt |  None | 690.114773313 |\n",
+      "|     sqft_lot     |  None |      0.0      |\n",
+      "|  sqft_lot_sqrt   |  None |      0.0      |\n",
+      "|      floors      |  None |      0.0      |\n",
+      "|  floors_square   |  None |      0.0      |\n",
+      "|    waterfront    |  None |      0.0      |\n",
+      "|       view       |  None |      0.0      |\n",
+      "|    condition     |  None |      0.0      |\n",
+      "|      grade       |  None | 2899.42026975 |\n",
+      "|    sqft_above    |  None | 30.0115753022 |\n",
+      "|  sqft_basement   |  None |      0.0      |\n",
+      "|     yr_built     |  None |      0.0      |\n",
+      "|   yr_renovated   |  None |      0.0      |\n",
+      "+------------------+-------+---------------+\n",
+      "[18 rows x 3 columns]\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = graphlab.linear_regression.create(training, target='price', features=all_features,\n",
+    "                                              validation_set=None, verbose=None,\n",
+    "                                              l2_penalty=0., l1_penalty=3448968612.16)\n",
+    "price_predicted = model.predict(validation)\n",
+    "RSS = ((price_predicted-validation['price'])**2).sum()\n",
+    "print RSS\n",
+    "print model.get(\"coefficients\").print_rows(num_rows=18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
